Change some values for align items

--- a/_utils.scss
+++ b/_utils.scss
@@ -51,6 +51,8 @@ $utils: (
             "3" : $base-margin * 4,
             "4" : $base-margin * 6,
             "5" : $base-margin * 8,
+            "auto-left-right" : 0 auto,
+            "auto-top-bottom" : 0 auto,
         ),
     ),
     "margin-left" : ("prefix" : 'ml',
@@ -146,10 +148,11 @@ $utils: (
         ),
     ),
     "align-items" : ("prefix" : 'align',
-        "values" : ("c" : center,
-            "r" : right,
-            "l" : left,
-            "j" : justify,
+        "values" : ("center" : center,
+            "end" : end,
+            "f-end" : flex-end,
+            "start" : start,
+            "f-start" : flex-start,
         ),
     ),
 );
