--- a/components/_card.scss
+++ b/components/_card.scss
@@ -3,10 +3,11 @@
     display: block;
     padding: $base-padding;
     border: $base-border-thickness solid #DDD;
-    border-radius: $base-border-radius / 4;
+    border-radius: calc($base-border-radius / 4);
     box-shadow: $base-box-shadow;
     margin: 25px;
     max-width: 400px;
+    background-color: #FFF;
 
     .card-title {
         font-size: $md-font-size;
