added justify terms

--- a/_utils.scss
+++ b/_utils.scss
@@ -6,6 +6,8 @@ $utils: (
             "3" : $base-padding * 4,
             "4" : $base-padding * 6,
             "5" : $base-padding * 8,
+            "auto-left-right" : 0 auto,
+            "auto-top-bottom" : auto 0,
         ),
     ),
     "padding-left" : ("prefix" : 'pl',
@@ -52,7 +54,7 @@ $utils: (
             "4" : $base-margin * 6,
             "5" : $base-margin * 8,
             "auto-left-right" : 0 auto,
-            "auto-top-bottom" : 0 auto,
+            "auto-top-bottom" : auto 0,
         ),
     ),
     "margin-left" : ("prefix" : 'ml',
@@ -153,6 +155,42 @@ $utils: (
             "f-end" : flex-end,
             "start" : start,
             "f-start" : flex-start,
+        ),
+    ),
+    "justify-content" : ("prefix" : 'jc',
+        "values" : ("center" : center,
+        "base" : baseline,
+            "end" : end,
+            "f-start" : flex-start,
+            "f-end" : flex-end,
+            "left" : left,
+            "sa" : space-around,
+            "sb" : space-between,
+            "se" : space-evenly,
+        ),
+    ),
+    "justify-self" : ("prefix" : 'js',
+        "values" : ("center" : center,
+        "base" : baseline,
+            "end" : end,
+            "f-start" : flex-start,
+            "f-end" : flex-end,
+            "left" : left,
+            "sa" : space-around,
+            "sb" : space-between,
+            "se" : space-evenly,
+        ),
+    ),
+    "justify-items" : ("prefix" : 'ji',
+        "values" : ("center" : center,
+        "base" : baseline,
+            "end" : end,
+            "f-start" : flex-start,
+            "f-end" : flex-end,
+            "left" : left,
+            "sa" : space-around,
+            "sb" : space-between,
+            "se" : space-evenly,
         ),
     ),
 );
