fix the deprecated function used troughout the codebase

--- a/_functions.scss
+++ b/_functions.scss
@@ -1,5 +1,5 @@
 @function light-comp($color) {
     $compl: complement($color);
-    $light-compl: lighten($compl, 30);
+    $light-compl: color.adjust($compl, 30);
     @return $light-compl;
 }
