--- a/components/_alert.scss
+++ b/components/_alert.scss
@@ -1,7 +1,7 @@
 @each $key,
 $val in $colors {
     .alert-#{$key} {
-        background-color: lighten($val, 10);
+        background-color: color.adjust($val, 10);
         border-radius: 8px;
         border: 1.75px solid darken($val, 18);
         word-wrap: break-word;
