--- a/components/_block.scss
+++ b/components/_block.scss
@@ -1,7 +1,7 @@
 @each $key,
 $val in $colors {
     .block-#{$key} {
-        background-color: lighten($val, 10);
+        background-color: color.adjust($val, 10);
         min-width: 100%;        
         min-height: 100%;        
     }
