--- a/_breakpoints.scss
+++ b/_breakpoints.scss
@@ -6,31 +6,31 @@ $breakpoints : ("xs" : 0,
 );
 
 @mixin xs {
-    @media screen and (min-width: map-get($breakpoints, "xs")) {
+    @media screen and (min-width: map.get($breakpoints, "xs")) {
         @content;
     }
 }
 
 @mixin sm {
-    @media screen and (min-width: map-get($breakpoints, "sm")) {
+    @media screen and (min-width: map.get($breakpoints, "sm")) {
         @content;
     }
 }
 
 @mixin md {
-    @media screen and (min-width: map-get($breakpoints, "md")) {
+    @media screen and (min-width: map.get($breakpoints, "md")) {
         @content;
     }
 }
 
 @mixin lg {
-    @media screen and (min-width: map-get($breakpoints, "lg")) {
+    @media screen and (min-width: map.get($breakpoints, "lg")) {
         @content;
     }
 }
 
 @mixin xl {
-    @media screen and (min-width: map-get($breakpoints, "xl")) {
+    @media screen and (min-width: map.get($breakpoints, "xl")) {
         @content;
     }
 }
